--- a/dev/examples/docs_4_rational_opt/index.html
+++ b/dev/examples/docs_4_rational_opt/index.html
@@ -27,24 +27,24 @@ x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
 println(&quot;\nOutput type of solution: &quot;, eltype(x))</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Agnostic EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
-MOMENTUM: nothing GRADIENTTYPE: Nothing
+MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
 Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.070155e-01   1.647404e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.078415e-01   3.290331e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.088630e-01   4.927217e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.101330e-01   6.555948e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.117258e-01   8.173596e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.135708e-01   9.778823e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.157639e-01   1.136799e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.181714e-01   1.294139e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.208809e-01   1.449553e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.239026e-01   1.602814e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.257021e-01   1.614187e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.408964e-01   1.560315e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.429700e-01   3.110565e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.450909e-01   4.650508e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.474822e-01   6.177776e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.499991e-01   7.692318e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.527959e-01   9.191235e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.567534e-01   1.065849e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.598731e-01   1.212354e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.631528e-01   1.357153e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.666084e-01   1.500131e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.677942e-01   1.512442e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -60,23 +60,23 @@ Output type of solution: BigFloat</code></pre><p>Another possible step-size rule
 );</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Shortstep EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
-MOMENTUM: nothing GRADIENTTYPE: Nothing
+MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
 Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.101137e-01   3.224624e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.110912e-01   6.428983e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.123477e-01   9.604682e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.138762e-01   1.274388e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.157695e-01   1.583433e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.179817e-01   1.886901e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.204751e-01   2.184257e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.232304e-01   2.475015e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.265860e-01   2.755783e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.301575e-01   3.028858e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.310265e-01   3.020906e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.806687e-01   2.626956e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.837207e-01   5.212124e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.859807e-01   7.772409e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.885456e-01   1.029480e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.916574e-01   1.276626e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.951218e-01   1.518519e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.990928e-01   1.753978e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.034303e-01   1.982994e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.082309e-01   2.204634e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.135827e-01   2.417896e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.147039e-01   2.411359e+02
 -------------------------------------------------------------------------------------------------
-  0.754750 seconds (1.28 M allocations: 70.908 MiB, 96.47% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 8 August 2023 07:56">Tuesday 8 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.915119 seconds (1.38 M allocations: 75.502 MiB, 95.21% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 17 August 2023 11:44">Thursday 17 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
